--- a/finalportfolio.html
+++ b/finalportfolio.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="C:\Users\venka\OneDrive\New folder\Html\portfolio\design.css">
-<link rel="stylesheet" href="C:\Users\venka\OneDrive\Pictures\Screenshots\Html\portfolio\design2.css">
+<link rel="stylesheet" href="design.css">
+<link rel="stylesheet" href="design2.css">
  <title>Portfolio | Ludiflex</title>
     <style>
         body{
